--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^9.19.2",
     "nuxt": "^3.8.2",
+    "prettier": "^3.1.1",
     "vue": "^3.3.12",
     "vue-router": "^4.2.5"
   }
