--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-vue": "^9.19.2",
     "nuxt": "^3.8.2",
     "prettier": "^3.1.1",
+    "stylelint": "^16.0.2",
     "vue": "^3.3.12",
     "vue-router": "^4.2.5"
   }
