--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "dependencies": {
+    "nuxt": "^3.8.2",
+    "vue": "^3.3.12"
+  },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-module": "^4.1.0",
@@ -18,10 +22,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^9.19.2",
-    "nuxt": "^3.8.2",
     "prettier": "^3.1.1",
     "stylelint": "^16.0.2",
-    "vue": "^3.3.12",
     "vue-router": "^4.2.5"
   }
 }
