--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^9.19.2",
     "prettier": "^3.1.1",
+    "sass": "^1.69.5",
     "stylelint": "^16.0.2",
     "vue-router": "^4.2.5"
   }
