--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "nuxt": "^3.8.2",
-    "vue": "^3.3.12",
-    "miragejs": "^0.1.48"
+    "vue": "^3.3.12"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/i18n": "^8.0.0-rc.11",
