--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^9.19.2",
+    "nuxt-quasar-ui": "^2.0.7",
     "prettier": "^3.1.1",
     "sass": "^1.69.5",
     "stylelint": "^16.0.2",
