lint: disable default export rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
     "no-undef": "off",
     "import/extensions": "off",
     "vue/multi-word-component-names": "off",
-    "vue/component-name-in-template-casing":["error", "PascalCase", { "registeredComponentsOnly": false }]
+    "vue/component-name-in-template-casing":["error", "PascalCase", { "registeredComponentsOnly": false }],
+    "import/prefer-default-export": "off"
   }
 }
