feat: add dayjs

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "dayjs": "^1.11.10",
     "nuxt": "^3.8.2",
     "uuid": "^9.0.1",
     "vue": "^3.3.12"
